force-app/main/default/objects/UsefulQuery__c/UsefulQuery__c.object-meta.xml
<CustomObject>
    <description>Object for storing useful queries for use in internal app.</description>
    <label>UsefulQuery</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UsefulQueries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>