force-app/main/default/objects/UsefulQuery__c/fields/DescriptionField__c.field-meta.xml
<CustomField>
    <fullName>DescriptionField__c</fullName>
    <description>Description for useful query.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>