force-app/main/default/objects/UsefulQuery__c/fields/LastUsedDate__c.field-meta.xml
<CustomField>
    <fullName>LastUsedDate__c</fullName>
    <description>Last time a SOQL Statement was copied</description>
    <label>LastUsedDate</label>
    <type>DateTime</type>
</CustomField>