force-app/main/default/objects/UsefulQuery__c/fields/SObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SObjectAPIName__c</fullName>
    <description>Picklist of valid SObject names available in the org.</description>
    <label>SObject API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associated_Location__c</fullName>
            </value>
            <value>
                <fullName>Associated_Location__c_hd</fullName>
            </value>
            <value>
                <fullName>Authorized_Adjustment_Line__c</fullName>
            </value>
            <value>
                <fullName>Authorized_Adjustment_Request__c</fullName>
            </value>
            <value>
                <fullName>Average_Cost_of_Goods_Sold__c</fullName>
            </value>
            <value>
                <fullName>Call_Log__c</fullName>
            </value>
            <value>
                <fullName>Case_Notification__c</fullName>
            </value>
            <value>
                <fullName>Case_Order__c</fullName>
            </value>
            <value>
                <fullName>Contract__c</fullName>
            </value>
            <value>
                <fullName>Contract__c_hd</fullName>
            </value>
            <value>
                <fullName>Contract_Condition__c</fullName>
            </value>
            <value>
                <fullName>Contract_Line__c</fullName>
            </value>
            <value>
                <fullName>ctu__CTU_Custom_Field_Ignored__c</fullName>
            </value>
            <value>
                <fullName>ctu__CTU_Mass_Clone__c</fullName>
            </value>
            <value>
                <fullName>ctu__Field_Default_Value_Obj__c</fullName>
            </value>
            <value>
                <fullName>ctu__General_Option_Value_Obj__c</fullName>
            </value>
            <value>
                <fullName>Customer_Cross_Reference__c</fullName>
            </value>
            <value>
                <fullName>Customer_Specification__c</fullName>
            </value>
            <value>
                <fullName>dfsle__AgreementConfiguration__c</fullName>
            </value>
            <value>
                <fullName>dfsle__BulkList__c</fullName>
            </value>
            <value>
                <fullName>dfsle__BulkStatus__c</fullName>
            </value>
            <value>
                <fullName>dfsle__CustomParameterMap__c</fullName>
            </value>
            <value>
                <fullName>dfsle__CustomRecipient__c</fullName>
            </value>
            <value>
                <fullName>dfsle__Document__c</fullName>
            </value>
            <value>
                <fullName>dfsle__Envelope__c</fullName>
            </value>
            <value>
                <fullName>dfsle__EnvelopeConfiguration__c</fullName>
            </value>
            <value>
                <fullName>dfsle__EnvelopeConfigurationDocument__c</fullName>
            </value>
            <value>
                <fullName>dfsle__EnvelopeConfigurationRecipient__c</fullName>
            </value>
            <value>
                <fullName>dfsle__EnvelopeLocalization__c</fullName>
            </value>
            <value>
                <fullName>dfsle__EnvelopeStatus__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>