force-app/main/default/objects/UsefulQuery__c/fields/SOQLField__c.field-meta.xml
<CustomField>
    <fullName>SOQLField__c</fullName>
    <description>The useful SOQL query being stored.</description>
    <inlineHelpText>&quot;SELECT field FROM table;&quot;</inlineHelpText>
    <label>SOQL Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>