force-app/main/default/objects/UsefulQuery__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Enforce query name uniqueness.</description>
    <label>UniqueName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>