force-app/main/default/objects/UsefulQuery__c/fields/UsageCount__c.field-meta.xml
<CustomField>
    <fullName>UsageCount__c</fullName>
    <description>Field to track how many times a SOQL Statement has been copied.</description>
    <label>UsageCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>